<resources>
    <string name="app_name">Betworks</string>
    <string name="welcome_message">Welcome to FireFly!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="validation_error">"Username &amp; password should have at least 1 letter and 1 digit"</string>
</resources>