<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.AppCompatButton
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="@dimen/view_height"
    tools:text="Login"
    android:textColor="@color/white"
    android:background="@color/login_button"
    android:layout_margin="@dimen/margin_rows"
    android:textAllCaps="false"
    />
